--- a/style.css
+++ b/style.css
@@ -82,6 +82,13 @@ header p {
   min-width: 150px;
   font-weight: 700px;
   font-family: 'Lato', sans-serif;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.submit-button:hover {
+  transform: scale(1.05);
+  box-shadow: 2px 2px 20px 5px rgba(0, 0, 0, 0.137);
 }
 
 .input {
@@ -253,4 +260,9 @@ header p {
   .users {
     flex-direction: column;
   }
+}
+
+/* TOASTR */
+.toast-message {
+  font-size: 2.5rem;
 }
